deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: nginx-deployment
spec:
        replicas: 2
        strategy:
                type: RollingUpdate
                rollingUpdate:
                        maxSurge: 50%
                        maxUnavailable: 50%
        selector:
                matchLabels:
                        app: app1
        template:
                metadata:
                        labels:
                                app: app1
                spec:
                        containers:
                                - name: cont7
                                  image: nginx:1.9.1
