healthcheck.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: healthcheck-object
spec:
        replicas: 2
        selector:
                matchLabels:
                        app: app2
        template:
                metadata:
                        labels:
                                app: app2
                spec:
                        containers:
                                - name: nginx-cont
                                  image: nginx:1.9.1
                                  ports:
                                          - containerPort: 80
                                  readinessProbe:
                                          httpGet:
                                                  path: /
                                                  port: 80
                                          initialDelaySeconds: 15
                                          periodSeconds: 20
                                  livenessProbe:
                                          httpGet:
                                                  path: /
                                                  port: 80
                                          initialDelaySeconds: 15
                                          periodSeconds: 60
