sample-pod.yaml
apiVersion: v1
kind: Pod
metadata:
        name: sample-pod
        labels:
                app: nginx
spec:
        containers:
                - name: cont1
                  image: nginx
