clusterip.yaml
apiVersion: v1
kind: Service
metadata:
        name: clusterip-service
spec:
        selector:
                app: nginx
        type: ClusterIP
        ports:
                - name: http
                  port: 80
                  targetPort: 80
                  protocol: TCP
