nodeport.yaml
apiVersion: v1
kind: Service
metadata:
        name: nodeport-service
spec:
        selector:
                app: nginx
        type: NodePort
        ports:
                - name: http
                  port: 80
                  targetPort: 80
                  nodePort: 31000
                  protocol: TCP
