ingress-demo.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
        name: ingress-demo
        annotations:
                kubernetes.io/ingress.class: nginx
spec:
        rules:
                - http:
                        paths:
                                - path: /nginx
                                  backend:
                                          serviceName: nginx
                                          servicePort: 80
